[package]
name = "ptcowlage"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
eframe.version = "0.33"
eframe.default-features = false
eframe.features = ["default_fonts", "glow", "x11", "wayland", "persistence"]
egui_extras.version = "0.33"
egui_extras.features = ["image"]
egui-toast = "0.19"
ptcow.version = "0.5.0"
tinyaudio = "2"
anyhow = "1"
bitflags.version = "2.11"
# For midi conversion
midly = "0.5.3"
# For PiyoPiyo conversion
piyopiyo = "0.4.0"
# For Organya conversion
organyacat = "0.2.0"
arrayvec = "0.7"
bytemuck = "1.24"
rustc-hash = "2.1.1"
log = "0.4.29"
egui_logger = "0.9.3"

# Web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3"
# to access the DOM (to hide the loading text)
web-sys = "0.3.70"

# Desktop-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# For finding japanese fallback font
fontique = "0.7.0"
egui-file-dialog = "0.12"
clap.version = "4.5"
clap.features = ["derive"]
recently_used_list = "0.1.0"

[profile.dev]
debug = "line-tables-only"
opt-level = 1
# Abort on dev profile too, just for the sake of consistent behavior
panic = "abort"

[profile.release]
lto = "thin"
# On wasm32, panic is just abort regardless of what we set here, so let's just abort everywhere
# for consistent behavior.
panic = "abort"

[patch.crates-io]
# TODO: New ptcow release
ptcow.git = "https://github.com/crumblingstatue/ptcow.git"
