[package]
name = "ptcowlage"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
eframe.version = "0.34"
eframe.default-features = false
eframe.features = ["default_fonts", "glow", "x11", "wayland", "persistence"]
egui_extras.version = "0.34"
egui_extras.features = ["image"]
egui-toast = "0.20"
ptcow.version = "0.6.0"
tinyaudio = "2"
anyhow = "1"
bitflags.version = "2.11"
# For midi conversion
midly = "0.5.3"
# For PiyoPiyo conversion
piyopiyo = "0.4.0"
# For Organya conversion
organyacat = "0.2.0"
# For .wav import/export
hound = "3.5.1"
arrayvec = "0.7"
bytemuck = "1.24"
rustc-hash = "2.1.1"
log = "0.4.29"
egui_logger.git = "https://github.com/crumblingstatue/egui_logger.git"

# Web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3"
# to access the DOM (to hide the loading text)
web-sys = "0.3.70"

# Desktop-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-file-dialog = "0.13"
clap.version = "4.6"
clap.features = ["derive"]
recently_used_list = "0.1.0"
# mimalloc seems to give substantially better epaint performance for the piano roll
mimalloc.version = "0.1"
mimalloc.features = ["v3"]

[profile.dev]
debug = "line-tables-only"
opt-level = 1
# Abort on dev profile too, just for the sake of consistent behavior
panic = "abort"

[profile.release]
lto = "thin"
# On wasm32, panic is just abort regardless of what we set here, so let's just abort everywhere
# for consistent behavior.
panic = "abort"

[patch.crates-io]
# TODO: Release new ptcow version
ptcow.git = "https://github.com/crumblingstatue/ptcow.git"
egui-file-dialog.git = "https://github.com/crumblingstatue/egui-file-dialog.git"
egui-file-dialog.branch = "retain-selected-entry"